# handwriting_ocr_ko

./: .gitignore  README.md  pyproject.toml  range-of-hanja.py  range-of-hanja.txt  test.py  train.py
data/: README.md
src/: __init__.py
src/common/: activations.py  gradients.py  losses.py  utils.py
src/data/: __init__.py  dataset_label.py  load_label.py  load_source.py  output_encoder.py  stream.py
src/layers/: __init__.py  affine.py  batch_normalization.py  convolution.py  cross_entropy_loss.py  ctc_loss.py  dropout.py  gelu.py  layer_normalization.py  linear.py  multi_head_attention.py  parameter.py  pooling.py  relu.py  sigmoid.py  softmax.py  softmax_with_loss.py  vit_block.py
src/models/: __init__.py  deep_conv_net.py  vit.py
src/numpy/: __init__.py
src/optimizers/: __init__.py  adagrad.py  adam.py  momentum.py  nesterov.py  optimizer.py  rmsprop.py  sgd.py
src/training/: __init__.py  output_encoder.py  trainer.py
src/utils/: chars.txt  patch.py  position_embedding.py  vocab.py
